Added main html page with css, created header and footer

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,71 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Main Page</title>
+<title>Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Football management system">
+<link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
-	<h1>This is main page content</h1>
+	<header>
+		<div th:replace="fragments/publicHeader :: publicHeader"></div>
+	</header>
+	
+	<section class="main-page-showcase">
+		<div class="container">
+			<h1>Welcome, to Futbola Parks</h1>
+			<p>This is place for some random but , good text from our club to all our clients </p>
+		</div>
+	</section>
+	
+	<section class="news-showcase">
+		<div class="container">
+			<h1>What`s new</h1>
+			<div class="box">
+					<img alt="lieldienas" src="/img/lieldienas.jpg">
+					<h3>Lieldienu Pasakums</h3>
+					<p>Piedalijamies lieldienu pasakuma</p>
+				</div>
+				<div class="box">
+				<img alt="turnirs" src="/img/turnirs.jpg">
+					<h3>Turnirs tallina</h3>
+					<p>Splejam igaunijas trunira, ar labiem panakumiem</p>
+				</div>
+				<div class="box">
+					<img alt="nometne" src="/img/nometne.jpg">
+					<h3>Nometne Priekulos</h3>
+					<p>Aizvadita karteja nometne priekulos</p>
+				</div>
+			
+		</div>
+	</section>
+	
+	<section class="players-showcase">
+		<div class="container">
+			<h1>Players of the month</h1>
+				<div class="box">
+					<img alt="ronaldo" src="/img/ronaldo.jpg">
+					<h3>Ronaldo</h3>
+					<p>Juventus</p>
+				</div>
+				<div class="box">
+				<img alt="neymar" src="/img/neymar.jpg">
+					<h3>Neymar</h3>
+					<p>PSG</p>
+				</div>
+				<div class="box">
+					<img alt="salah" src="/img/salah.jpg">
+					<h3>Mohamed</h3>
+					<p>Liverpool</p>
+				</div>
+		</div>
+	</section>
+	
+	<footer>
+		<div th:replace="fragments/footer :: footer"></div>
+	</footer>
+	
+	
+	
 </body>
 </html>
