--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -26,6 +26,64 @@ ul {
 	color: #b30000;
 }
 
+.button-group a{
+	text-decoration: none;
+	padding:10px 10px 10px 10px;
+	color: #ffffff;
+	text-align: center;
+	border-radius:5px; 
+}
+
+.button-group a:hover{
+	background-color: gray;
+	
+}
+
+.button-group .editButton{
+	background-color: #000099;
+}
+
+.button-group .detailsButton{
+	background-color: #008000;
+}
+
+.button-group .deleteButton{
+	background-color: #b30000;
+}
+
+.add-button {
+	padding: 10px;
+	margin-top: 10px;
+	background-color: #333333;
+	color: white;
+	border: 0;
+}
+
+.custom-table {
+	table-layout: auto;
+	width: 100%;
+}
+
+/* global custom table*/
+.custom-table td, table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.custom-table tr:nth-child(even){
+	background-color: #e6e6e6;
+}
+
+
+.custom-table th {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  text-align: left;
+  background-color: #333333;
+  color: #ffffff;
+}
+
+
 /*header*/
 header{
 	background: #333333;
@@ -123,6 +181,78 @@ footer{
 	background-color: #333333;
 	text-align: center;
 }
+
+/*Coach page*/
+
+
+/*Modal*/
+
+.modal{
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width:100%;
+	overflow: auto;
+	background-color: rgb(0,0,0,0.5);
+}
+
+.modalContent{
+	background-color: #f4f4f4;
+	margin: 20% auto;
+	width: 70%;
+	box-shadow: 0 5px 8px rgb(0,0,0,0.2), 0 5px 8px rgb(0,0,0,0.2);
+}
+
+.modal-header h3, .modal-footer h3 {
+	margin: 0;
+}
+
+.modal-header {
+	background: #333333;
+	padding: 10px;
+	color: #ffffff;
+}
+
+.modal-body {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.modal-footer {
+	padding: 10px;
+	color: #ffffff;
+	background: #333333;
+}
+
+.modalCloseButton{
+	float: right;
+	font-size: 30px;
+}
+
+.modalCloseButton:hover, .modalCloseButton:focus{
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.modalSaveButton {
+	padding: 10px;
+	background-color: #ffffff;
+	border-radius: 8px;
+	border: 0;
+	transition-duration: 0.4s;
+}
+
+.modalSaveButton:hover {
+	background-color: gray;
+	color: #ffffff;
+	
+}
+
+
 
 
 
