--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title></title>
 </head>
 <body>
 	<div class="container" th:fragment="secureHeader">
@@ -18,8 +18,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="index.html">Coaches</a></li>
-						<li><a href="index.html">Players</a></li>
+						<li><a th:href="@{/rest/coach}">Coaches</a></li>
+						<li><a th:href="@{/rest/player}">Players</a></li>
 						<li><a href="index.html">Teams</a></li>
 						<li><a href="index.html">Tournaments</a></li>
 						<li><a href="index.html">Training</a></li>
