--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -52,12 +52,20 @@ ul {
 }
 
 .add-button {
+	border-radius:5px; 
 	padding: 10px;
 	margin-top: 10px;
-	background-color: #333333;
+	background-color: #008000;
 	color: white;
 	border: 0;
 }
+
+.add-button:hover {
+	background-color:gray;
+	color: #ffffff;
+}
+
+
 
 .custom-table {
 	table-layout: auto;
@@ -201,8 +209,8 @@ footer{
 
 .modalContent{
 	background-color: #f4f4f4;
-	margin: 20% auto;
-	width: 70%;
+	margin:2% auto;
+	width: 50%;
 	box-shadow: 0 5px 8px rgb(0,0,0,0.2), 0 5px 8px rgb(0,0,0,0.2);
 }
 
@@ -240,7 +248,8 @@ footer{
 
 .modalSaveButton {
 	padding: 10px;
-	background-color: #ffffff;
+	background-color: #333333;
+	color: #ffffff;
 	border-radius: 8px;
 	border: 0;
 	transition-duration: 0.4s;
@@ -252,7 +261,30 @@ footer{
 	
 }
 
+.modalDeleteButton {
+	text-decoration: none;
+	padding:10px 10px 10px 10px;
+	color: #ffffff;
+	text-align: center;
+	border-radius:5px;
+	background-color: #b30000; 
+}
 
+.modalDeleteButton:hover {
+	background-color: gray;
+	color: #ffffff;
+}
+
+/*Modal form*/
+.form-div{
+	padding:10px;
+}
+
+.form-div input {
+	width:100%;
+	border: 1px solid gray;
+  	border-radius: 4px;
+}
 
 
 
