--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -210,7 +210,7 @@ footer{
 .modalContent{
 	background-color: #f4f4f4;
 	margin:2% auto;
-	width: 50%;
+	width: 40%;
 	box-shadow: 0 5px 8px rgb(0,0,0,0.2), 0 5px 8px rgb(0,0,0,0.2);
 }
 
@@ -225,8 +225,7 @@ footer{
 }
 
 .modal-body {
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding: 10px;
 }
 
 .modal-footer {
@@ -253,6 +252,7 @@ footer{
 	border-radius: 8px;
 	border: 0;
 	transition-duration: 0.4s;
+	text-decoration: none;
 }
 
 .modalSaveButton:hover {
@@ -267,7 +267,8 @@ footer{
 	color: #ffffff;
 	text-align: center;
 	border-radius:5px;
-	background-color: #b30000; 
+	background-color: #b30000;
+	padding:5px; 
 }
 
 .modalDeleteButton:hover {
@@ -282,8 +283,18 @@ footer{
 
 .form-div input {
 	width:100%;
+	height:30px;
 	border: 1px solid gray;
   	border-radius: 4px;
+  	
+}
+
+.form-div select {
+	width:100%;
+	height:40px;
+	border: 1px solid gray;
+  	border-radius: 4px;
+  	
 }
 
 
