Added upload picture modal, info modal

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-		<div th:replace="fragments/publicHeader :: publicHeader"></div>
+		<div th:replace="fragments/secureHeader :: secureHeader"></div>
 	</header>
 	
 	<section class="main-page-showcase">
