--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -75,7 +75,7 @@ ul {
 /* global custom table*/
 .custom-table td, table th {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 4px;
 }
 
 .custom-table tr:nth-child(even){
@@ -91,6 +91,12 @@ ul {
   color: #ffffff;
 }
 
+.min-images{
+  	display: block;
+  	margin: 0px;
+  	padding:0px;
+  	align-content: center;
+}
 
 /*header*/
 header{
@@ -133,6 +139,7 @@ header nav{
 
 header a:hover {
 	color: #b30000;
+	
 }
 
 /*Main page showcase */
@@ -281,11 +288,15 @@ footer{
 	padding:10px;
 }
 
+
 .form-div input {
 	width:100%;
 	height:30px;
 	border: 1px solid gray;
   	border-radius: 4px;
+  	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15px;
+  	
   	
 }
 
@@ -294,7 +305,24 @@ footer{
 	height:40px;
 	border: 1px solid gray;
   	border-radius: 4px;
+  	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15px;
   	
+}
+
+.photo-modal-div{
+	display:flex;
+}
+
+.photo-div{
+	float: left;
+	padding: 10px;
+	border-right: 2px solid gray;
+}
+
+.info-div{
+	float:right;
+	padding: 10px;
 }
 
 
