--- a/src/main/resources/templates/coach.html
+++ b/src/main/resources/templates/coach.html
@@ -18,7 +18,7 @@
 		<table class="custom-table">
 			<tbody>
 				<tr>
-					<th>Picture</th>
+					<th>Photo</th>
 					<th>Name</th>
 					<th>Surname</th>
 					<th>Phone</th>
@@ -27,7 +27,11 @@
 					<th>Options</th>
 				</tr>
 				<tr th:each="coach : ${coaches}">
-					<td th:text="${coach.photo}"></td>
+					<td >
+						<a class="photoButton" th:href="@{/rest/coach/findById/(id=${coach.id})}">
+ 							<img class="min-images" th:src="@{'/img/coaches/' + ${coach.id} +'.jpg'}" width="60" height="60">
+ 						</a>
+					</td>
 					<td th:text="${coach.name}"></td>
 					<td th:text="${coach.surname}"></td>
 					<td th:text="${coach.phone}"></td>
@@ -35,7 +39,7 @@
 					<td th:text="${coach.category}"></td>
 					<td class="button-group">
 						<a class="editButton" th:href="@{/rest/coach/findById/(id=${coach.id})}">Edit</a>
-						<a class="detailsButton" href="">Details</a>
+						<a class="detailsButton" th:href="@{/rest/coach/findById/(id=${coach.id})}">Add Image</a>
 						<a class="deleteButton" th:href="@{/rest/coach/delete/(id=${coach.id})}" >Delete</a>
 					</td>
 				</tr>
@@ -51,7 +55,7 @@
 	</footer>
 	
 <!--Add new modal start  -->
-	<div id="addModal" class="modal">
+<div id="addModal" class="modal">
 		<div class="modalContent">
 			<div class="modal-header">
 				<span class="modalCloseButton">&times;</span>
@@ -88,28 +92,6 @@
 							<option>B-LFF</option>
 							<option>C-LFF</option>
 						</select>
-					</div>
-					<div class="form-div">
-						<label>Coach</label>
-						<br>
-						<select >
-				            <option>Select Team</option>
-				            <option th:each="team:${teams}"
-					            th:value="${team.id}"
-					            th:text="${team.name}">
-				            </option>
-           				 </select>
-					</div>
-					<div class="form-div">
-						<label>Assistant Coach</label>
-						<br>
-						<select >
-				            <option>Select Team</option>
-				            <option th:each="team:${teams}"
-					            th:value="${team.id}"
-					            th:text="${team.name}">
-				            </option>
-           				 </select>
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
@@ -166,28 +148,6 @@
 						</select>
 					</div>
 					<div class="form-div">
-						<label>Coach</label>
-						<br>
-						<select name="teams" id="teamsEdit">
-				            <option>Select Team</option>
-				            <option th:each="team:${teams}"
-					            th:value="${team.id}"
-					            th:text="${team.name}">
-				            </option>
-           				 </select>
-					</div>
-					<div class="form-div">
-						<label>Assistant Coach</label>
-						<br>
-						<select name="assistanTeams" id="assistantTeamsEdit">
-				            <option>Select Team</option>
-				            <option th:each="team:${teams}"
-					            th:value="${team.id}"
-					            th:text="${team.name}">
-				            </option>
-           				 </select>
-					</div>
-					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
 					</div>
 				</form>
@@ -199,7 +159,7 @@
 <!--Edit modal end-->
 
 <!--Delete modal start  -->
-	<div id="deleteModal" class="modal">
+<div id="deleteModal" class="modal">
 		<div class="modalContent">
 			<div class="modal-header">
 				<span class="modalCloseButton">&times;</span>
@@ -215,8 +175,59 @@
 	</div>
 <!--Delete modal end -->
 
+<!--Upload modal start -->
+<div id="uploadModal" class="modal">
+		<div class="modalContent">
+			<div class="modal-header">
+				<span class="modalCloseButton">&times;</span>
+				<h3>Upload</h3>
+			</div>
+			<div class="form-div">
+				<form id="uploadForm" th:action="@{/rest/coach/upload/}" method="post" enctype="multipart/form-data">
+					<div class="form-div">
+						<label>Select image:</label>
+						<input type="file" id="photo" name="file" accept="images/*">
+					</div>
+					<div class="form-div">
+						<button class="modalSaveButton" type="submit" >Save</button>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+			</div>
+		</div>
+	</div>
+<!--Upload modal end -->
+
+<!--Photo modal start -->
+<div id="photoModal" class="modal">
+		<div class="modalContent">
+			<div class="modal-header">
+				<span class="modalCloseButton">&times;</span>
+				<h3>Info</h3>
+			</div>
+			<div class ="photo-modal-div">
+				<div class="photo-div" >
+					<img id="photoModalImage" src="" width="100%" height="100%">
+				</div>
+				<div class="info-div">
+					<p>Name:</p>
+					<p id="photo-name">Name</p>
+					<p>Surname:</p>
+					<p id="photo-surname">Surname</p>
+					<p>Age:</p>
+					<p id="photo-age">Age</p>
+				</div>
+			</div>	
+			<div class="modal-footer">
+			</div>
+		</div>
+	</div>
+<!--Photo modal end -->
+
+
 <script src="/js/addModal.js"></script>
 <script src="/js/deleteModal.js"></script>
-<script src="/js/editModal.js"></script>			
+<script src="/js/coachModal.js"></script>			
 </body>
 </html>
