--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -17,7 +17,7 @@
 		<div class="container">
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a th:href="@{/}">Home</a></li>
 						<li><a th:href="@{/rest/coach}">Coaches</a></li>
 						<li><a th:href="@{/rest/player}">Players</a></li>
 						<li><a href="index.html">Teams</a></li>
