--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,6 +14,7 @@ body {
 	width: 80%;
 	margin:auto;
 	overflow: hidden;
+	
 }
 
 ul {
@@ -39,15 +40,15 @@ ul {
 	
 }
 
-.button-group .editButton{
+.button-group .edit-button{
 	background-color: #000099;
 }
 
-.button-group .detailsButton{
+.button-group .details-button{
 	background-color: #008000;
 }
 
-.button-group .deleteButton{
+.button-group .delete-button{
 	background-color: #b30000;
 }
 
@@ -69,7 +70,7 @@ ul {
 
 .custom-table {
 	table-layout: auto;
-	width: 100%;
+	width: 110%;
 }
 
 /* global custom table*/
@@ -309,7 +310,7 @@ footer{
 	font-size: 15px;
   	
 }
-
+/*PHoto Modal*/
 .photo-modal-div{
 	display:flex;
 }
@@ -325,6 +326,52 @@ footer{
 	padding: 10px;
 }
 
+/*Search content*/
+
+.search-div{
+	background-color: #e6e6e6;
+	padding:20px;
+	margin: 5px;
+}
+
+.search-input{ 
+	width:50%;
+	height:30px;
+	border: 1px solid gray;
+  	border-radius: 4px;
+  	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15px;
+}
+
+.search-button {
+	padding: 10px;
+	background-color: #333333;
+	color: #ffffff;
+	border-radius: 8px;
+	border: 0;
+	transition-duration: 0.4s;
+	text-decoration: none;
+}
+
+.search-button:hover {
+	background-color: gray;
+	color: #ffffff;
+}
+
+.clear-button {
+	padding: 10px;
+	background-color: #b30000;
+	color: #ffffff;
+	border-radius: 8px;
+	border: 0;
+	transition-duration: 0.4s;
+	text-decoration: none;
+}
+
+.clear-button:hover {
+	background-color: gray;
+	color: #ffffff;
+}
 
 
 
