--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -20,7 +20,7 @@
 						<li><a th:href="@{/}">Home</a></li>
 						<li><a th:href="@{/rest/coach}">Coaches</a></li>
 						<li><a th:href="@{/rest/player}">Players</a></li>
-						<li><a href="index.html">Teams</a></li>
+						<li><a th:href="@{/rest/team}">Teams</a></li>
 						<li><a href="index.html">Tournaments</a></li>
 						<li><a href="index.html">Training</a></li>
 						<li><a href="index.html">Contacts</a></li>
