--- a/src/main/resources/templates/coach.html
+++ b/src/main/resources/templates/coach.html
@@ -23,6 +23,8 @@
 				&nbsp;
 				<input class="clear-button" type="button" value="Clear" id="clear-button"/>
 			</form>
+			&nbsp;
+			<button class="add-button"  id="addButton">Add new Coach</button>
 		</div>
 		
 		<table class="custom-table">
@@ -55,9 +57,6 @@
 				</tr>
 			</tbody>
 		</table>
-		<div>
-			<button class="add-button"  id="addButton">Add new Coach</button>
-		</div>
 	</div>
 	
 	<footer>
